--- a/app/index.html
+++ b/app/index.html
@@ -1,25 +1,197 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>AED - Airdroplet ERC20 Ðapp</title>
+  <title>Airdroplet ERC20 Ðapp</title>
   <meta charset="UTF-8">
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.min.css">
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.min.js"></script>
   <script src="./app.js"></script>
+  <style>
+
+  body {
+
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(328deg, #ff0000, #0042ff);
+    background-size: 400% 400%;
+
+    -webkit-animation: AnimationName 16s ease infinite;
+    -moz-animation: AnimationName 16s ease infinite;
+    animation: AnimationName 16s ease infinite;
+
+  }
+
+  @-webkit-keyframes AnimationName {
+      0%{background-position:0% 50%}
+      50%{background-position:100% 50%}
+      100%{background-position:0% 50%}
+  }
+  @-moz-keyframes AnimationName {
+      0%{background-position:0% 50%}
+      50%{background-position:100% 50%}
+      100%{background-position:0% 50%}
+  }
+  @keyframes AnimationName {
+      0%{background-position:0% 50%}
+      50%{background-position:100% 50%}
+      100%{background-position:0% 50%}
+  }
+
+
+
+
+
+
+  </style>
+
 </head>
+
+
+
 <body>
-  <h1>Airdroplet</h1>
-  <div id="tokendefine">ERC20 loaded:&nbsp;&nbsp;&nbsp;<span id="name"></span></span>
-  <h3>Balance:&nbsp;&nbsp;&nbsp;<span class="black"><i class="tags icon"></i>&nbsp;&nbsp;<span id="balance"></span>&nbsp;&nbsp;<span id="ticker"></span> &nbsp;&nbsp;&nbsp;&nbsp;<i class="ethereum icon"></i>&nbsp;&nbsp;<span id="ethbalance"></span></span></h3>
+
+  <div id="main" class="ui blue message" style="bottom:margin:0;top:0;left:0;right:0;width:725px;">
+    <h2 class="ui center aligned icon header">
+      <i class="circular tint icon"></i>
+      Airdroplet
+    </h2>
+
+<br>
+
+  <b for="amount">ERC20 address:&nbsp;&nbsp;&nbsp;<b><input type="text" id="tkadd" placeholder="0x345ca3e014aaf5dca488057592ee47305d9b3e10"></input>
+    <div class="ui small basic icon buttons">
+  <button class="ui orange button" onclick="App.initialiseERC20()"><i class="file alternate icon"></i></button>
+</div>
   <br>
-  <br><label for="amount">Amount:</label><input type="text" id="amount" placeholder="e.g., 95"></input>
-  <br><label for="receiver">To Address:</label><input type="text" id="receiver" placeholder="e.g., 0x93e66d9baea28c17d9fc393b53e3fbdd76899dae"></input>
-  <br><br><button id="send" onclick="App.sendCoin()">Send MetaCoin</button>
-  <br><br>
-  <span id="status"></span>
   <br>
-  <span class="hint"><strong>Hint:</strong> open the browser developer console to view any errors and warnings.</span>
+  <div id="spacer" style="height:35px;"></div>
+
+  <div id="tokendefine" >ERC20 loaded:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b><i><span id="name">Loading contract...&nbsp;&nbsp;<div class="ui active inline mini loader"></div></span></i><b></span>
+  </div>
+  <div id="spacer" style="height:35px;"></div>
+
+  <b style="color:orange;">1 Batch = 150 Address's</b>
+
+  <br>
+  <span id="status" ></span>
+  <div id="spacer" style="height:35px;"></div>
+
+  <b> <label for="amount">Amount:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b></label><input type="text" id="amount" placeholder="e.g., 95"></input>
+    <div id="spacer" style="height:35px;"></div>
+
+ <b for="receiver">Recipents:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</b><input type="file" id="receiver" placeholder="e.g., 0x93e66d9baea28c17d9fc393b53e3fbdd76899dae"></input>
+ <div id="spacer" style="height:35px;"></div>
+ <div id="spacer" style="height:35px;"></div>
+
+<div class="ui vertical animated green button" id="send" onclick="App.sendCoin()" tabindex="0">
+  <div class="hidden content">Airdrop</div>
+  <div class="visible content">
+    <i class="tint icon"></i>
+  </div>
+</div>
+
+
+</div>
+
+
+<script>
+
+var tarone = [];
+var tartwo = [];
+var tarthree = [];
+var tarfour = [];
+var tarfive = [];
+var tarsix = [];
+var tarseven = [];
+var tareight = [];
+var tarnine = [];
+var tarten = [];
+var taroneone = [];
+var taronetwo = [];
+var taronethree = [];
+var taronefour = [];
+var taronefive = [];
+var taronesix = [];
+var taroneseven = [];
+var taroneeight = [];
+var taronenine = [];
+var taroneten = [];
+
+     $(function () {
+         document.getElementById('receiver').onchange = function () {
+             var file = this.files[0];
+             var reader = new FileReader();
+             reader.onload = function (progressEvent) {
+                 // Entire file
+                 // By lines
+                 var lines = this.result.split('\n');
+                 for (var line = 0; line < lines.length-1; line++) {
+
+                     var sample = App.checkAdd(lines[line],line);
+                     App.setStatus("Batches required: " + (lines.length/150).toFixed(3),1);
+                     if(sample.length == 42)
+                     {
+
+                       if(tarone.length < 150){tarone.push(sample);}
+                       else if(tartwo.length < 150){tartwo.push(sample);}
+                       else if(tarthree.length < 150){tarthree.push(sample);}
+                       else if(tarfour.length < 150){tarfour.push(sample);}
+                       else if(tarfive.length < 150){tarfive.push(sample);}
+                       else if(tarsix.length < 150){tarsix.push(sample);}
+                       else if(tarseven.length < 150){tarseven.push(sample);}
+                       else if(tareight.length < 150){tareight.push(sample);}
+                       else if(tarnine.length < 150){tarnine.push(sample);}
+                       else if(tarten.length < 150){tarten.push(sample);}
+                       else if(taroneone.length < 150){taroneone.push(sample);}
+                       else if(taronetwo.length < 150){taronetwo.push(sample);}
+                       else if(taronethree.length < 150){taronethree.push(sample);}
+                       else if(taronefour.length < 150){taronefour.push(sample);}
+                       else if(taronefive.length < 150){taronefive.push(sample);}
+                       else if(taronesix.length < 150){taronesix.push(sample);}
+                       else if(taroneseven.length < 150){taroneseven.push(sample);}
+                       else if(taroneeight.length < 150){taroneeight.push(sample);}
+                       else if(taronenine.length < 150){taronenine.push(sample);}
+                       else if(taroneten.length < 150){taroneten.push(sample);}
+
+                     }
+
+                 }
+
+
+
+             };
+             reader.readAsText(file);
+         };
+     });
+
+
+
+App.loadArray(tarone);
+App.loadArray(tartwo);
+App.loadArray(tarthree);
+App.loadArray(tarfour);
+App.loadArray(tarfive);
+App.loadArray(tarsix);
+App.loadArray(tarseven);
+App.loadArray(tareight);
+App.loadArray(tarnine);
+App.loadArray(tarten);
+App.loadArray(taroneone);
+App.loadArray(taronetwo);
+App.loadArray(taronethree);
+App.loadArray(taronefour);
+App.loadArray(taronefive);
+App.loadArray(taronesix);
+App.loadArray(taroneseven);
+App.loadArray(taroneeight);
+App.loadArray(taronenine);
+App.loadArray(taroneten);
+
+ </script>
+
 </body>
+
+
 </html>
